@@ -530,8 +530,9 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
                                                    'org' => 'DailySet1',
                                                    'config_name' => 'TESTCONF',
                                                    'date' => 'February 25, 2009',
+                                                   'exit_status' => '0',
                                                    'hostname' => 'localhost.localdomain',
-                                                   'timestamp' => '20090225080737'
+                                                   'timestamp' => '20090225080737',
                                                  },
                                        'summary' => [
                                                       {
@@ -1740,6 +1741,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
                                                    'org' => 'DailySet1',
                                                    'config_name' => 'TESTCONF',
                                                    'date' => 'January 7, 2010',
+                                                   'exit_status' => '0',
                                                    'hostname' => 'advantium',
                                                    'timestamp' => '20100107111335'
                                                  },
@@ -1934,6 +1936,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
                                                    'org' => 'DailySet1',
                                                    'config_name' => 'TESTCONF',
                                                    'date' => 'June 22, 2009',
+                                                   'exit_status' => '0',
                                                    'hostname' => 'centralcity.zmanda.com',
                                                    'timestamp' => '20090622075550'
                                                  },
@@ -2964,6 +2967,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
                                                    'org' => 'DailySet1',
                                                    'config_name' => 'TESTCONF',
                                                    'date' => 'August 24, 2010',
+                                                   'exit_status' => '2',
                                                    'hostname' => 'molybdenum.zmanda.com',
                                                    'timestamp' => '20100824181503'
                                                  },
@@ -3349,6 +3353,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
                                                    'org' => 'DailySet1',
                                                    'config_name' => 'TESTCONF',
                                                    'date' => 'March 3, 2010',
+                                                   'exit_status' => '16',
                                                    'hostname' => 'euclid',
                                                    'timestamp' => '20100303133320'
                                                  },
@@ -3480,6 +3485,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
                                                    'org' => 'DailySet1',
                                                    'config_name' => 'TESTCONF',
                                                    'date' => 'March 3, 2010',
+                                                   'exit_status' => '0',
                                                    'hostname' => 'euclid',
                                                    'timestamp' => '20100303153307'
                                                  },
@@ -3636,6 +3642,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
                                                    'org' => 'DailySet1',
                                                    'config_name' => 'TESTCONF',
                                                    'date' => 'March 3, 2010',
+                                                   'exit_status' => '5',
                                                    'hostname' => 'localhost.localdomain',
                                                    'timestamp' => '20100303144314'
                                                  },
@@ -3771,6 +3778,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
                                                    'org' => 'DailySet1',
                                                    'config_name' => 'TESTCONF',
                                                    'date' => 'March 3, 2010',
+                                                   'exit_status' => '0',
                                                    'hostname' => 'localhost.localdomain',
                                                    'timestamp' => '20100303132501'
                                                  },
@@ -3914,6 +3922,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
                                                    'org' => 'DailySet1',
                                                    'config_name' => 'TESTCONF',
                                                    'date' => 'March 3, 2010',
+                                                   'exit_status' => '0',
                                                    'hostname' => 'localhost.localdomain',
                                                    'timestamp' => '20100303132501'
                                                  },
@@ -4057,6 +4066,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
                                                    'org' => 'DailySet1',
                                                    'config_name' => 'TESTCONF',
                                                    'date' => 'March 13, 2010',
+                                                   'exit_status' => '4',
                                                    'hostname' => 'advantium',
                                                    'timestamp' => '20100313212012'
                                                  },
@@ -4376,6 +4386,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
                                                    'org' => 'DailySet1',
                                                    'config_name' => 'TESTCONF',
                                                    'date' => 'July 13, 2010',
+                                                   'exit_status' => '0',
                                                    'hostname' => 'localhost.localdomain',
                                                    'timestamp' => '20100713120014'
                                                  },
@@ -4539,6 +4550,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
                                                    'org' => 'DailySet1',
                                                    'config_name' => 'TESTCONF',
                                                    'date' => 'September 8, 2010',
+                                                   'exit_status' => '0',
                                                    'hostname' => 'localhost.localdomain',
                                                    'timestamp' => '20100908110856'
                                                  },
